--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,10 +34,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('addArticle') }}">Ajout Article</a>
+                        <a class="nav-link" href="{{ path('addArticle') }}">Ajout des Article</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path("listeArticle") }}">Liste des Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path("ajoutCategorie") }}">Ajout de Catégorie</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
