--- a/templates/back/categorie.html.twig
+++ b/templates/back/categorie.html.twig
@@ -1,10 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-
-{% endblock %}
 
 {% block title %}
 
 {% endblock %}
+
+
+
+{% block body %}
+
+    {{ form_start(form) }}
+    <label for="">Nom de la catégorie</label>
+    {{ form_row(form.nom) }}
+    {{ form_row(form.valider) }}
+    {{ form_end(form) }}
+
+
+{% endblock %}
+
+
 
