--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,6 +43,9 @@
                         <a class="nav-link" href="{{ path("ajoutCategorie") }}">Ajout de Catégorie</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path("listeCategorie") }}">liste de Catégorie</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item dropdown">
