--- a/templates/back/modifArticle.html.twig
+++ b/templates/back/modifArticle.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'BaseBack.html.twig' %}
 {% block title %}
     {{ parent() }} Modification d'Article
 {% endblock %}
