--- a/templates/BaseBack.html.twig
+++ b/templates/BaseBack.html.twig
@@ -61,7 +61,7 @@
             <a class="dropdown-item" href="{{ path('listeArticle') }}">Liste des articles</a>
         </div>
     </li>
-    <a href="#about">À propos</a>
+    <a href="{{ path('gestionCommande') }}">Gestion Commandes</a>
 </div>
 
 <div class="content">
